# pdfpc

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.rst  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTORS  Dockerfile  FAQ.rst  Makefile  README.rst  README.txt  SUPPORT.md  create-c-src.sh  make_release.sh  package.sh  pdfpcrc
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
.github/workflows/: cmake-ubuntu.yml  cmake-windows.yml  publish-release.yml
c-src/: CMakeLists.txt  icon_path.in  paths.in  pdfpc.c  pdfpc.in  presenter.h  presenter_internal.h
c-src/classes/: cache_status.c  configFileReader.c  mutex_locks.c  options.c  presentation_controller.c  scaler.c  timer_label.c
c-src/classes/metadata/: base.c  pdf.c  slides_notes.c
c-src/classes/renderer/: base.c  pdf.c
c-src/classes/renderer/cache/: base.c  option_factory.c
c-src/classes/renderer/cache/png/: engine.c  item.c
c-src/classes/renderer/cache/simple/: engine.c
c-src/classes/view/: base.c  default.c  pdf.c
c-src/classes/view/behaviour/: base.c
c-src/classes/view/behaviour/pdf_link/: implementation.c  signal_provider.c
c-src/classes/window/: fullscreen.c  overview.c  presentation.c  presenter.c  presenter.in
c-src/interfaces/: controllable.c
c-src/interfaces/renderer/: caching.c
c-src/interfaces/view/: prerendering.c
c-src/interfaces/view/behaviour/: decoratable.c
cmake/vala/: FindVala.cmake  README.rst  UseVala.cmake  ValaPrecompile.cmake  ValaVersion.cmake
conf/: FindVala.cmake  ParseArguments.cmake  ValaPrecompile.cmake
css/: CMakeLists.txt  notes.css  pdfpc.css
demo/: .gitignore  Makefile  pdfpc-demo.tex
demo/pdfpc-video-example/: Makefile  pdfpc-video-example.tex  video-example.tex
icons/: CMakeLists.txt  README.icons  windows.rc.in
latex/: CMakeLists.txt  Makefile  pdfpc.dtx  pdfpc.ins  pdfpc.sty
latex/pdfpc/: .gitignore  README.md  pdfpc-doc.dtx  pdfpc-doc.tex  pdfpc.dtx  pdfpc.ins  pdfpc.pkg  pdfpc.sty
man/: CMakeLists.txt  pdfpc.1  pdfpc.in  pdfpcrc.in
rc/: CMakeLists.txt  notes.css  pdfpc.css  pdfpcrc  rcfile-headset  rcfile-logitech
schema/: pdfpc.json
src/: .gitignore  CMakeLists.txt  Makefile  cache_status.vala  console.c  console.h  console.vapi  custom_binding.vapi  display_backend.c  display_backend.h  icon_path.in  libmarkdown.vapi  libqrencode.vapi  paths.in  pdf_image.vala  pdf_presenter_console.vala  pdfpc-helper.c  pdfpc-helper.h  pdfpc.1  pdfpc.vala  pdfpc.version  poppler-annot-file-attachment.vapi  presentation_controller.vala  presentation_window.vala  presenter_window.vala  procinfo.c  procinfo.h  procinfo.vapi  release.vala.in
src/classes/: cache_status.vala  configFileReader.vala  config_file_reader.vala  dbus_server.vala  fullscreen_window.vala  movie.vala  mutex_locks.vala  options.vala  pdf_event_box.vala  pdf_image.vala  presentation_controller.vala  presentation_window.vala  presenter_window.vala  resource.vala  resources.vala  rest_server.vala  scaler.vala  signal_decorator.vala  slides_notes.vala  timer.vala  timer_label.vala
src/classes/action/: action_mapping.vala  link_action.vala  movie.vala
src/classes/drawings/: drawing.vala  drawing_commands.vala  drawings.vala  storage.vala
src/classes/link_handler/: base.vala  default.vala  default_link_handler.vala
src/classes/metadata/: base.vala  jump_points.vala  pdf.vala  slides_notes.vala  xml.vala
src/classes/renderer/: base.vala  cache.vala  image.vala  markdown.vala  pdf.vala
src/classes/renderer/cache/: base.vala  option_factory.vala  simple.vala
src/classes/renderer/cache/png/: engine.vala  item.vala
src/classes/renderer/cache/png/persistent/: engine.vala
src/classes/renderer/cache/simple/: engine.vala
src/classes/signal_decorator/: base.vala  pdf_link.vala
src/classes/slide/: metadata.vala  renderer.vala  view.vala
src/classes/slide/metadata/: base.vala  pdf.vala
src/classes/slide/renderer/: base.vala  pdf.vala
src/classes/slide/view/: base.vala  default.vala
src/classes/view/: base.vala  default.vala  markdown.vala  pdf.vala  transition_manager.vala  video.vala
src/classes/view/behaviour/: base.vala  pdf_link.vala
src/classes/view/behaviour/pdf_link/: implementation.vala  signal_provider.vala
src/classes/window/: auxiliary.vala  controllable.vala  fullscreen.vala  geometry.vala  overview.vala  presentation.vala  presenter.vala  qrcode.vala  toolbox.vala
src/interfaces/: caching.vala  controllable.vala  link_handler.vala  signal_decoratable.vala
src/interfaces/renderer/: caching.vala
src/interfaces/slide/: caching.vala
src/interfaces/view/: prerendering.vala
src/interfaces/view/behaviour/: decoratable.vala
src/patches/: gdk_pixbuf_save_to_buffer_vapi.patch
src/vapis/: gdk-pixbuf-2.0.vapi
tests/: CMakeLists.txt  foobar.vala
windows-setup/: make_version_nsh.sh  package.sh  pdfpc.nsi
