install(FILES
    blank.svg
    hidden.svg
    snow.svg
    pause.svg
    saved.svg
    loaded.svg
    locked.svg
    empty.svg
    highlight.svg
    pen.svg
    eraser.svg
    move.svg
    settings.svg
    linewidth.svg
    spotlight.svg
    play_cur.svg
    pause_cur.svg
DESTINATION
    share/pdfpc/icons
)

